# fork_python_dev_settings

./: .flake8  .gitignore  .pycodestyle  POETRY.md  README.md  UV.md  example.py  pyproject.toml  pytest.ini  settings.json  setup.py
.cursor/: settings.json
src/: module.py
