[project]
name = "python-setup"
version = "0.1.0"
description = "Project description"
requires-python = ">=3.9"
dependencies = [
    "ruff>=0.4.0",
    "mypy>=1.9.0"
]
authors = [
    {name = "Klaus Begins", email = "klaus.begins@company.com"}
]

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
# Ativa todas as regras possíveis (v0.4.0+)
select = ["ALL"]
preview = true

# Ignora regras indesejadas
ignore = [
    "D",     # Ignore todos os erros de docstring...
]

# ...mas reativa presença obrigatória de docstring
extend-select = ["D100", "D101", "D103"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
preview = true

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
ignore_missing_imports = false
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
